--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.7",
     "react": "^16.8.1",
+    "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.1",
-    "react-scripts": "2.1.3"
+    "react-redux": "^6.0.1",
+    "react-scripts": "2.1.3",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,5 +28,14 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.11.2",
+    "fetch-mock": "^7.3.1",
+    "jasmine": "^3.3.1",
+    "jasmine-enzyme": "^7.0.1",
+    "node-fetch": "^2.3.0",
+    "redux-mock-store": "^1.5.3"
+  }
 }
