--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.1",
     "react-redux": "^6.0.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
