--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.14.7",
     "react": "^16.8.1",
-    "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.1",
     "react-redux": "^6.0.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "2.1.3",
+    "reactstrap": "^8.1.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
